# HullNext

./: README.md  download_image.py  image_driver.py  images.py  links.txt  pyproject.toml  scrape.py  screen_shot.py
data/hullnext/: index.html  text.txt
data/hullnext/activities-hull/: index.html  links.txt  text.txt
data/hullnext/allerton-hill/: index.html  links.txt  text.txt
data/hullnext/alphabetstreets/: index.html  text.txt
data/hullnext/aquarium-condos/: index.html  text.txt
data/hullnext/attractions-hull/: index.html  links.txt  text.txt
data/hullnext/disclaimer/: index.html  text.txt
data/hullnext/events-hub-hull/: index.html  links.txt  text.txt
data/hullnext/greenhill/: index.html  text.txt
data/hullnext/gunrock/: index.html  links.txt  text.txt
data/hullnext/hampton-circle/: index.html  text.txt
data/hullnext/home-transformations/: index.html  links.txt  text.txt
data/hullnext/homeimprovementservices/: index.html  links.txt  text.txt
data/hullnext/hull-historic-landmarks/: index.html  links.txt  text.txt
data/hullnext/hull-village/: index.html  links.txt  text.txt
data/hullnext/hullmap/: index.html  text.txt
data/hullnext/images/: image_urls.txt
data/hullnext/josnauticalbar/: index.html  text.txt
data/hullnext/kenberma/: index.html  links.txt  text.txt
data/hullnext/links-of-hull-ma/: index.html  links.txt  text.txt
data/hullnext/movingtohullma/: index.html  links.txt  text.txt
data/hullnext/nantasket/: index.html  text.txt
data/hullnext/neighborhoods/: index.html  links.txt  text.txt
screen_shot/: shot.py
(+87 files in other folders)
